--- a/app/src/docs/asciidoc/api-doc.adoc
+++ b/app/src/docs/asciidoc/api-doc.adoc
@@ -728,3 +728,62 @@ include::{snippets}/study-comment-delete-not-account/http-request.adoc[]
 include::{snippets}/study-comment-delete-not-account/response-fields.adoc[]
 ===== Response Example
 include::{snippets}/study-comment-delete-not-account/http-response.adoc[]
+
+=== 스터디 댓글 좋아요 생성
+==== - 주어진 스터디 댓글 식별자에 해당하는 댓글이 없는 경우
+===== Request Path Parameters
+include::{snippets}/study-comment-like-not-existed-id/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-comment-like-not-existed-id/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-comment-like-not-existed-id/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-comment-like-not-existed-id/http-response.adoc[]
+
+=== 스터디 댓글 좋아요 삭제
+==== - 주어진 스터디 댓글 식별자에 해당하는 댓글이 없는 경우
+===== Request Path Parameters
+include::{snippets}/study-comment-unlike-not-existed-id/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-comment-delete-not-existed-id/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-comment-delete-not-existed-id/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-comment-delete-not-existed-id/http-response.adoc[]
+
+=== 스터디 댓글 좋아요 삭제
+==== - 주어진 스터디 댓글 식별자에 해당하는 좋아요 댓글이 없는 경우
+===== Request Path Parameters
+include::{snippets}/study-comment-like-not-existed-like/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-comment-like-not-existed-like/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-comment-like-not-existed-like/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-comment-like-not-existed-like/http-response.adoc[]
+
+=== 스터디 즐겨찾기 생성
+==== - 주어진 스터디 식별자에 해당하는 즐겨찾기가 존재하는 경우
+===== Request Path Parameters
+include::{snippets}/study-favorite-already-existed/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-favorite-already-existed/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-favorite-already-existed/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-favorite-already-existed/http-response.adoc[]
+
+==== - 주어진 스터디 식별자에 해당하는 스터디가 존재하지 않는 경우
+===== Request Path Parameters
+include::{snippets}/study-favorite-not-existed-id/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-favorite-not-existed-id/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-favorite-not-existed-id/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-favorite-not-existed-id/http-response.adoc[]
