--- a/app/src/docs/asciidoc/api-doc.adoc
+++ b/app/src/docs/asciidoc/api-doc.adoc
@@ -787,3 +787,26 @@ include::{snippets}/study-favorite-not-existed-id/http-request.adoc[]
 include::{snippets}/study-favorite-not-existed-id/response-fields.adoc[]
 ===== Response Example
 include::{snippets}/study-favorite-not-existed-id/http-response.adoc[]
+
+=== 스터디 즐겨찾기 삭제
+==== - 주어진 스터디 식별자에 해당하는 스터디 좋아요 존재하지 않는 경우
+===== Request Path Parameters
+include::{snippets}/study-unfavorite-not-existed-like/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-unfavorite-not-existed-like/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-unfavorite-not-existed-like/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-unfavorite-not-existed-like/http-response.adoc[]
+
+==== - 주어진 스터디 식별자에 해당하는 스터디가 존재하지 않는 경우
+===== Request Path Parameters
+include::{snippets}/study-unfavorite-not-existed-study/path-parameters.adoc[]
+===== Request Example
+include::{snippets}/study-unfavorite-not-existed-study/http-request.adoc[]
+
+===== Response
+include::{snippets}/study-unfavorite-not-existed-study/response-fields.adoc[]
+===== Response Example
+include::{snippets}/study-unfavorite-not-existed-study/http-response.adoc[]
