--- a/app/src/docs/asciidoc/api-doc.adoc
+++ b/app/src/docs/asciidoc/api-doc.adoc
@@ -346,6 +346,26 @@ include::{snippets}/interview-create/response-fields.adoc[]
 ===== Response Example
 include::{snippets}/interview-create/http-response.adoc[]
 
+== 5. 로그인
+=== 5-1. 카카오 로그인
+==== - 카카오 로그인한 이메일이 이미 존재하는 경우
+===== Request Example
+include::{snippets}/kakao-login-existed-email/http-request.adoc[]
+
+===== Response
+include::{snippets}/kakao-login-existed-email/response-fields.adoc[]
+===== Response Example
+include::{snippets}/kakao-login-existed-email/http-response.adoc[]
+
+==== - 카카오 로그인한 이메일이 존재하지 않는 경우
+===== Request Example
+include::{snippets}/kakao-login-existed-email/http-request.adoc[]
+
+===== Response
+include::{snippets}/kakao-login-not-existed-email/response-fields.adoc[]
+===== Response Example
+include::{snippets}/kakao-login-not-existed-email/http-response.adoc[]
+
 == REST API 실패
 
 == 1. 사용자
